Fullscreen and signout Added fullscreen button Fixed UI with height overflow Signout logic added to button Updated README

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,3 +3,11 @@
 
 @use "./pages/landing" as *;
 // @use "./pages/game" as *;
+
+// .blackjack-page {
+//     background-color: white;
+// }
+
+button, .btn {
+    font-size: 0.8rem!important;
+}
