--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -8,10 +8,11 @@
     // justify-content: center;
     // align-items: center;
     // min-height: calc(100vh - 100px - 4rem);
-    padding-bottom: 1rem;
+    // padding-bottom: 1rem;
+    background-color: white;
 
     @include media-breakpoint-up(lg) {
-        min-height: calc(100vh - 2rem);
+        min-height: calc(100vh - 0rem);
         padding-bottom: 0rem;
         flex-direction: row;
         // padding-top: 10rem;
@@ -26,18 +27,20 @@
         // bottom: 0px;
         width: 100%;
         object-fit: cover;
-        z-index: -1;
+        z-index: 0;
     }
 
     .side-bar {
-        margin: 1rem;
+        // margin: 1rem;
+        padding: 0.5rem;
+        z-index: 1;
 
         @include media-breakpoint-up(lg) {
             position: absolute;
             top: 0;
             left: 0;
             width: 250px;
-            height: 100%;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -74,6 +77,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        z-index: 1;
 
         @include media-breakpoint-up(lg) {
             margin-left: calc(250px + 1rem);
